--- a/src/assets/css/main.less
+++ b/src/assets/css/main.less
@@ -1,11 +1,9 @@
 #main{
     width: 100%;
-    height: 500px;
-    margin-top: 20px;
+    margin: 20px 0 50px;
 }
 .content{
     width: 75%;
-    height: 500px;
     max-width: 1200px;
     margin: 0 auto;
     display: flex;
