添加工具集合

--- a/src/assets/css/box.less
+++ b/src/assets/css/box.less
@@ -3,6 +3,7 @@
   margin-bottom: 20px;
   background-color: #fff;
   border-radius: 2px;
+  color: #213135;
   .title{
     width: 100%;
     font-size: 18px;
